[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "cryptography>=45.0.6",
    "kaleido>=1.1.0",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
]
